--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,15 @@
  *= require_self
  *= require_tree .
  */
+
+ body {
+  padding-top: 70px; background-color: #546a8f;
+ }
+
+ ul {
+  list-style-type: none;
+ }
+
+ .well {
+  background-color: #4f5359; color: white;
+ }
