--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,3 +1,5 @@
+
+
 <h1><%= @organization.name %></h1>
   <br />
   <br />
@@ -8,6 +10,21 @@
     </p>
   </div>
 
+  <h3>Donate $15 with the help of Stripe</h3>
+  <div class="well">
+    <%= form_tag charges_path do %>
+      <article>
+        <label class="amount">
+          <span>Amount: $15.00</span>
+        </label>
+      </article>
+
+      <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+            data-description="A one time donation"
+            data-amount="1500"></script>
+    <% end %>
+  </div>
   <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
     <div class="container">
       <%= link_to "Edit Organization", edit_organization_path, :class => "navbar-text navbar-left" %>
